Fixes for navbar styles

--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -133,6 +133,7 @@ footer#footer {
   background-color: #1d84c3;
 }
 .block .user-login-form,
+.block--userlogin a,
 .nav.navbar-nav > li > a {
   color: #f9f9f9;
 }
