Add more colors to paragraphs

--- a/themes/custom/masradix/scss/components/_paragraphs.scss
+++ b/themes/custom/masradix/scss/components/_paragraphs.scss
@@ -2,12 +2,51 @@
     border-left: 10px solid #8b0000;
 }
 
+.paragraph.color-_ff000 {
+    border-left: 10px solid #ff0000;
+}
+
+
 .paragraph.color-_08000 {
     border-left: 10px solid #008000;
 }
 
+.paragraph.color-_0000ff {
+    border-left: 10px solid #0000ff;
+}
+
+.paragraph.color-_08000 {
+    border-left: 10px solid #008000;
+}
+
+
 .paragraph.color-ffa500 {
     border-left: 10px solid #ff8c4e;
+}
+
+
+.paragraph.color-006400 {
+    border-left: 10px solid #006400;
+}
+
+.paragraph.color-871F78 {
+    border-left: 10px solid #871F78;
+}
+
+.paragraph.color-ADD8E6 {
+    border-left: 10px solid #ADD8E6;
+}
+
+.paragraph.color-D3D3D3 {
+    border-left: 10px solid #D3D3D3;
+}
+
+.paragraph.color-808080 {
+    border-left: 10px solid #808080;
+}
+
+.paragraph.color-000000 {
+    border-left: 10px solid #000000;
 }
 
 .paragraph.paragraph--type--status {
