--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -198,7 +198,7 @@ article.service-request--teaser footer {
   .color-ff0000 {
     color: #FF0000;
   }
-  .color-FFA500 {
+  .color-ffa500 {
     color: #ff8c4e;
   }
   .color-008000 {
@@ -207,7 +207,7 @@ article.service-request--teaser footer {
   .color-006400 {
     color: #006400;
   }
-  .color-0000ff {
+  .color-0000FF {
     color: #0000FF;
   }
   .color-00008b {
@@ -216,16 +216,16 @@ article.service-request--teaser footer {
   .color-a020f0 {
     color: #A020F0;
   }
-  .color-871F78 {
+  .color-871f78 {
     color: #871F78;
   }
   .color-5f9ea0 {
     color: #5F9EA0;
   }
-  .color-ADD8E6 {
-    color: #ADD8E6;
+  .color-add8e6 {
+    color: #20b4e4;
   }
-  .color-D3D3D3 {
+  .color-d3d3d3 {
     color: #D3D3D3;
   }
   .color-808080 {
@@ -234,8 +234,8 @@ article.service-request--teaser footer {
   .color-000000 {
     color: #000000;
   }
-  .color-F5F5DC {
-    color: #F5F5DC;
+  .color-f5f5fdc {
+    color: #bbbb15;
   }
   .color-FFFFFF {
     color: #FFFFFF;
