Set class names to lowercase

--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7376,7 +7376,7 @@ article.service-request--teaser footer {
   color: #FF0000; }
 
 .col-sm-6.fa .color-ffa500, article.service-request .color-ffa500 {
-  color: #ff8c4e; }
+  color: #ff5722; }
 
 .col-sm-6.fa .color-008000, article.service-request .color-008000 {
   color: #008000; }
