--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -199,7 +199,7 @@ article.service-request--teaser footer {
     color: #FF0000;
   }
   .color-ffa500 {
-    color: #ff8c4e;
+    color: #ff5722;
   }
   .color-008000 {
     color: #008000;
