--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7369,7 +7369,7 @@ article.service-request--teaser footer {
   background: none;
   text-align: center; }
 
-.col-sm-6.fa .color-8B0000, article.service-request .color-8B0000 {
+.col-sm-6.fa .color-8b0000, article.service-request .color-8b0000 {
   color: #8b0000; }
 
 .col-sm-6.fa .color-ff0000, article.service-request .color-ff0000 {
@@ -7384,7 +7384,7 @@ article.service-request--teaser footer {
 .col-sm-6.fa .color-006400, article.service-request .color-006400 {
   color: #006400; }
 
-.col-sm-6.fa .color-0000FF, article.service-request .color-0000FF {
+.col-sm-6.fa .color-0000ff, article.service-request .color-0000ff {
   color: #0000FF; }
 
 .col-sm-6.fa .color-00008b, article.service-request .color-00008b {
