--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -192,7 +192,7 @@ article.service-request--teaser footer {
 }
 
 .col-sm-6.fa {
-  .color-8B0000 {
+  .color-8b0000 {
     color: #8b0000;
   }
   .color-ff0000 {
@@ -207,7 +207,7 @@ article.service-request--teaser footer {
   .color-006400 {
     color: #006400;
   }
-  .color-0000FF {
+  .color-0000ff {
     color: #0000FF;
   }
   .color-00008b {
