--- a/themes/custom/masradix/scss/components/_sitebranding.scss
+++ b/themes/custom/masradix/scss/components/_sitebranding.scss
@@ -1,26 +1,19 @@
-.navbar-brand {
-      height: 40px;
-    width: 40px;
-}
 
 
 img.site-logo {
   float: none;
-  margin: 20px auto;
+  margin: 0 auto;
 
-  @media (min-width: 1200px) {
+  @media (min-width: $screen-md) {
     max-height: 40px;
     max-width: 40px;
-    display: none;
   }
-  @media (max-width: $screen-sm-max) {
-    max-height: 100px;
+  @media (max-width: $screen-md) {
+    max-height: 50px;
     display: block;
 
   }
-  @media (max-width: $screen-md-max) {
-    max-height: 80px;
-  }
+
 }
 
 .region-head.col-md-12 .block.block--masradix-sitebranding {
