--- a/themes/custom/masradix/scss/components/_navbar.scss
+++ b/themes/custom/masradix/scss/components/_navbar.scss
@@ -1,7 +1,49 @@
-@media (min-width: 768px) {
-    .navbar-nav {
-        float: none!important;
-        margin: 0;
+@media (min-width: $screen-lg) {
+
+    .navbar-left {
+        float: left !important;
+        margin: 20px;
     }
 }
 
+@media (max-width: $screen-md) {
+    .navbar-nav {
+        float: none!important;
+        margin: 0;
+
+    }
+
+    button.navbar-toggle.offcanvas-toggle {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+}
+
+.navbar-toggle {
+  @media (max-width: $screen-md) {
+    display: block;
+  }
+  @media (min-width: $screen-sm) {
+     .icon-bar {
+      display: block;
+      width: 25px;
+      height: 3px;
+      border-radius: 1px;
+    }
+  }
+}
+
+
+.navbar-default {
+    border-color: transparent;
+    background-color: transparent;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: transparent;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    
+}
