--- a/themes/custom/masradix/scss/mas/_sidebarNav.scss
+++ b/themes/custom/masradix/scss/mas/_sidebarNav.scss
@@ -1,20 +1,13 @@
-// Styles for sidenav
 
-
-
-
-/*
-
-#sidebar-wrapper::-webkit-scrollbar {
-  display: none;
-}
-*/
 /*-------------------------------*/
 /*     Sidebar nav styles        */
 /*-------------------------------*/
 
-@media (max-width: $screen-md-max) {
+@media (max-width: $screen-md) {
 
+  .navbar-offcanvas {
+    padding: 0!important
+  }
 
   .nav .open > a {
     background-color: transparent;
@@ -79,6 +72,10 @@
     line-height: 44px;
   }
 
+  .navbar-brand {
+    float: none !important;
+  }
+
   .fixed-header {
     position: fixed;
     width: 30px;
@@ -103,220 +100,6 @@
 }
 
 
-/*-------------------------------*/
-/*       Hamburger-Cross         */
-/*-------------------------------*/
-
-.hamburger {
-  background: transparent;
-  border: none;
-  display: block;
-  height: 32px;
-  width: 32px;
-  @media (max-width: $screen-sm-min) {
-    opacity: 0.6;
-    :hover {
-      opacity:1;
-    }
-  }
-}
-
-.view__header .hamburger {
-  background: transparent;
-  position: relative !important;
-  border: none;
-  display: inline;
-  margin-left: 2px;
-  height: 26px;
-  width: 22px;
-  top: 3px;
-}
-
-body.toolbar-vertical .hamburger,
-body.toolbar-horizontal .hamburger {
-  position: fixed;
-  top: 55px;
-}
-
-body.toolbar-vertical #sidebar-wrapper,
-body.toolbar-horizontal #sidebar-wrapper {
-  top: 38px;
-}
-
-.toolbar-vertical.toolbar-tray-open nav#sidebar-wrapper {
-  right: -150px;
-}
-
-nav.block.block--menu.block--benutzermenu {
-  margin: 10px;
-}
-
-.hamburger.is-closed:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  color: #ffffff;
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 0;
-  text-align: center;
-  width: 100px;
-}
-
-.hamburger.is-closed:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
-}
-
-.hamburger.is-closed:hover .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  top: 0;
-}
-
-.hamburger.is-closed:hover .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  bottom: 0;
-}
-
-.hamburger.is-closed .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: #2c4a85;
-  top: 5px;
-}
-
-.hamburger.is-closed .hamb-middle {
-  background-color: #2c4a85;
-  margin-top: -2px;
-  top: 50%;
-}
-
-.hamburger.is-closed .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: #2c4a85;
-  bottom: 5px;
-}
-
-.hamburger.is-closed .hamb-top, .hamburger.is-closed .hamb-middle, .hamburger.is-closed .hamb-bottom, .hamburger.is-open .hamb-top, .hamburger.is-open .hamb-middle, .hamburger.is-open .hamb-bottom {
-  height: 4px;
-  left: 0;
-  position: absolute;
-  width: 100%;
-}
-
-.hamburger.is-open .hamb-top {
-  -webkit-transform: rotate(45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: rgba(104, 127, 160, 1);
-  margin-top: -2px;
-  top: 50%;
-}
-
-.hamburger.is-open .hamb-middle {
-  background-color: rgba(104, 127, 160, 1);
-  display: none;
-}
-
-.hamburger.is-open .hamb-bottom {
-  -webkit-transform: rotate(-45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: rgba(104, 127, 160, 1);
-  margin-top: -2px;
-  top: 50%;
-}
-
-.hamburger.is-open:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: rgba(104, 127, 160, 1);
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 0;
-  text-align: center;
-  width: 100px;
-}
-
-.hamburger.is-open:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
-}
-
-/*-------------------------------*/
-/*          Dark Overlay         */
-/*-------------------------------*/
-.overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1;
-}
-
-.toolbar-horizontal .overlay {
-  z-index: 1000;
-}
-
-.toolbar-tray-vertical {
-  width: 22rem !important;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-}
-
-.slideout-menu {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 270px;
-  min-height: 100vh;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-  z-index: 0;
-  display: none;
-}
-
-.slideout-menu-left {
-  left: 0;
-}
-
-.slideout-menu-right {
-  right: 0;
-}
-
-.slideout-panel {
-  position: relative;
-  z-index: 1;
-  // will-change: transform;
-  background-color: #FFF; /* A background-color is required */
-  min-height: 100vh;
-  -webkit-box-shadow: 2px 0 1px -2px rgba(0, 0, 0, 0.68);
-          box-shadow: 2px 0 1px -2px rgba(0, 0, 0, 0.68);
-}
-
-.slideout-open,
-.slideout-open body,
-.slideout-open .slideout-panel {
-  overflow: hidden;
-}
-
-.slideout-open .slideout-menu {
-  display: block;
-}
-
-
 .navbar-right {
   float: none!important;
   margin-right: -15px;
@@ -324,43 +107,18 @@ body {
 }
 
 
-@media (min-width: $screen-lg) {
+@media (min-width: $screen-md) {
 
   .fixed-header {
     display: none;
   }
 
-  nav#sidebar-wrapper {
-    display: block;
-    position: inherit;
-    width: $screen-lg;
-    min-height: 100px;
-    border-radius: 0;
-    background: none;
-    border: 0;
-  }
-  .slideout-menu {
-    overflow-y: auto;
-  }
-
   a.navbar-brand {
-    margin: 0;
+    margin: 0 100px 0 0;
   }
-
-
-  .navbar-brand {
-      float: left!important;
-  }
-
 
   .block .user-login-form {
     display: none;
-  }
-
-  .navbar-inner {
-    padding: 0;
-    height: 50px;
-    margin: 10px 0 0 120px;
   }
 
   .navbar-left {
